# soundtracker

./: .gitignore  AGENTS.md  AUDIT_AND_PROPOSAL.md  CONVENTIONS.md  DEVELOPMENT_PLAN.md  MUSIC_CRAWLER_TASKS.md  README.md  TASKS.md
App/: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONVENTIONS_FRONTEND.md  DEPLOY.md  DEVELOPMENT_PLAN.md  PENDING_CHANGES.md  README.md  TASKS.md  docker-compose.yml  pyproject.toml  secrets.md  start.sh  stop.sh
App/.github/workflows/: ci.yml
App/backend/: .dockerignore  Dockerfile  requirements.txt
App/backend/app/: config.py  database.py  main.py
App/backend/tests/: conftest.py  test_assets_router.py  test_backend_config.py  test_batch_router.py  test_composers.py  test_database.py  test_main.py  test_music_router.py  test_router_misc.py  test_search.py  test_services_backend.py
App/frontend/: .dockerignore  Dockerfile  jest.config.js  jest.config.mjs  jest.config.ts  jest.setup.tsx  next.config.ts  package-lock.json  package.json
App/frontend/messages/: en.json  es.json
App/frontend/src/: middleware.ts
App/intermediate_research/: 001_herbert_stothart.md
App/outputs/: 001_herbert_stothart.md  002_max_steiner.md  003_roy_webb.md  004_philip_sainton.md  005_sergei_prokofiev.md  006_arthur_honegger.md  007_dimitri_tiomkin.md  008_paul_hindemith.md  009_hans_j_salter.md  010_erich_wolfgang_korngold.md  011_victor_young.md  012_georges_auric.md  013_alfred_newman.md  014_aaron_copland.md  015_hugo_friedhofer.md  016_daniele_amfitheatrof.md  017_bronis_aw_kaper.md  018_aram_khachaturian.md  019_franz_waxman.md  020_dmitri_shostakovich.md  024_samuel_barber.md  027_david_raksin.md  029_akira_ifukube.md  030_fumio_hayasaka.md  034_leonard_bernstein.md  036_piero_piccioni.md  037_elmer_bernstein.md  038_maurice_jarre.md  043_mikis_theodorakis.md  046_ennio_morricone.md  049_sergio_leone.md  050_t_ru_takemitsu.md  051_krzysztof_komeda.md  053_john_williams.md  054_lalo_schifrin.md  055_michel_legrand.md  056_francis_lai.md  058_isao_tomita.md  059_john_barry.md  060_quincy_jones.md  (+63 more)
App/outputs/OLD/: 001_herbert_stothart.md  002_max_steiner.md  003_roy_webb.md  004_philip_sainton.md  005_sergei_prokofiev.md  006_arthur_honegger.md  007_dimitri_tiomkin.md  008_paul_hindemith.md  009_hans_j_salter.md  010_erich_wolfgang_korngold.md  011_victor_young.md  012_georges_auric.md  013_alfred_newman.md  014_aaron_copland.md  015_hugo_friedhofer.md  016_daniele_amfitheatrof.md  017_bronis_aw_kaper.md  018_aram_khachaturian.md  019_franz_waxman.md  020_dmitri_shostakovich.md  021_mikl_s_r_zsa.md  022_leigh_harline.md  023_alex_north.md  025_bernard_herrmann.md  026_nino_rota.md  028_jerome_moross.md  031_carlo_rustichelli.md  032_armando_trovajoli.md  033_nino_oliviero.md  035_ernest_gold.md  039_henry_mancini.md  040_leonard_rosenman.md  041_johnny_mandel.md  042_georges_delerue.md  044_bruno_nicolai.md  045_riz_ortolani.md  047_jerry_goldsmith.md  048_andr_previn.md  052_sofia_gubaidulina.md  057_wojciech_kilar.md  (+57 more)
App/scripts/: batch_process_composers.py  build_database.py  build_global_master_list.py  build_top100_from_web.py  build_top_lists.py  clean_master_list_titles.py  create_composer_files.py  dedupe_posters.py  deep_search_composers.py  deploy.sh  etl_music.py  etl_playlist.py  generate_composers.py  get_composer_info.py  imdb_build_db.py  imdb_update_master_list.py  manage_master_list.py  master_list_sources.py  music_crawler_batch.py  schema.sql  schema_music.sql  test_single_composer.py  update_countries.py  update_top10_youtube.py
App/scripts/etl/: __init__.py  parser.py
App/src/soundtracker/: __init__.py  config.py  logging_config.py  models.py  pipeline.py
App/tests/: __init__.py  conftest.py  test_cache.py  test_config.py  test_etl_music.py  test_generators.py  test_logging_config.py  test_manage_master_list.py  test_markdown_generator.py  test_models.py  test_parser.py  test_pipeline.py  test_update_top10_youtube.py  test_utils.py
App/tests/test_clients/: test_base_client.py  test_imdb_dataset.py  test_search.py  test_search_chrome.py  test_spotify.py  test_tmdb.py  test_wikidata.py  test_wikipedia.py  test_youtube.py
App/tests/test_services/: test_awards_service.py  test_biography_service.py  test_filmography_service.py  test_posters_service.py  test_research_service.py  test_top10_service.py  test_translator_service.py
Music Crawler/: README.md  README_LOCAL.md  pyproject.toml  requirements.txt
Music Crawler/data/sample_lists/: stothart_top10.txt
Music Crawler/downloads/Herbert_Stothart/: REPORT.md
Music Crawler/downloads/Mozart/: REPORT.md
Music Crawler/src/: __init__.py
Music Crawler/src/cache/: manager.py
Music Crawler/src/cli/: crawl.py
Music Crawler/src/core/: config.py  logger.py  rate_limiter.py
Music Crawler/src/downloaders/: __init__.py  ytdlp.py
Music Crawler/src/models/: __init__.py  track.py
Music Crawler/src/parsers/: __init__.py  track_list.py
Music Crawler/src/playlist/: __init__.py  embed.py  generator.py  models.py
Music Crawler/src/providers/: base.py  chrome.py  duckduckgo.py  perplexity.py
Music Crawler/src/report/: generator.py
Music Crawler/tests/: __init__.py  test_cache.py  test_cache_manager.py  test_chrome_provider.py  test_cli_crawl.py  test_core_logger.py  test_duckduckgo_provider.py  test_parser.py  test_parser_extra.py  test_perplexity_provider.py  test_playlist.py  test_playlist_generator_extra.py  test_playlist_models_embed.py  test_providers_extra.py  test_rate_limiter.py  test_rate_limiter_extended.py  test_report_generator.py  test_report_generator_full.py  test_searchers.py  test_searchers_extra.py  test_track.py  test_track_extra.py  test_ytdlp_downloader.py
(+116 files in other folders)
