[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soundtracker"
version = "2.0.0"
description = "Sistema automatizado de investigación de compositores de bandas sonoras de cine"
readme = "README.md"
license = {text = "Private"}
requires-python = ">=3.11"
authors = [
    {name = "SOUNDTRACKER Team"}
]
keywords = ["film", "music", "composers", "soundtracks", "database"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio",
]

# Dependencias principales
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "googlesearch-python>=1.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
# Dependencias de desarrollo
dev = [
    "ruff>=0.1.9",
    "black>=24.1.0",
    "mypy>=1.8.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "types-requests>=2.31.0",
    "types-beautifulsoup4>=4.12.0",
]

# Backend API (Fase 3)
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]

# Todas las dependencias
all = [
    "soundtracker[dev,api]",
]

[project.urls]
Documentation = "https://github.com/soundtracker/docs"
Repository = "https://github.com/soundtracker/app"

[project.scripts]
soundtracker = "soundtracker.cli:main"

# ============================================================================
# TOOL CONFIGURATIONS
# ============================================================================

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
soundtracker = ["py.typed"]

# ----------------------------------------------------------------------------
# Ruff (Linter - reemplaza flake8, pylint, isort)
# ----------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # Allow assert in tests
"scripts/*" = ["T201"]  # Allow print in scripts (temporarily)

[tool.ruff.lint.isort]
known-first-party = ["soundtracker"]

# ----------------------------------------------------------------------------
# Black (Formatter)
# ----------------------------------------------------------------------------
[tool.black]
target-version = ["py311"]
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | _build
    | buck-out
    | build
    | dist
    | outputs
)/
'''

# ----------------------------------------------------------------------------
# MyPy (Type Checker)
# ----------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true

# Permitir imports de paquetes sin stubs
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "googlesearch.*",
    "bs4.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--strict-config",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

# ----------------------------------------------------------------------------
# Coverage
# ----------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/soundtracker"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 50
show_missing = true
