[project]
name = "music-crawler"
version = "0.1.0"
description = "CLI tool to search and download music tracks from legal sources"
requires-python = ">=3.12"
dependencies = [
    "yt-dlp>=2024.1.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "ruff>=0.1.0", "mypy>=1.8.0"]

[project.scripts]
music-crawl = "src.cli.crawl:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
